--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-
-  "name": "Test",
-
+  "name": "dmgbot",
   "description": "Test",
-
-  "version": "0.0.0",
-
+  "version": "1.0.0",
   "main": "bot.js",
-
-  "scripts": {
-
-    "start": "node bot.js"
-
+  "engines": {
+  	"node": "8.10.0",
+  	"npm": "3.5.2"
   },
-
+  "scripts": {
+    "start": "node bot.js"
+  },
   "dependencies": {
-
     "discord.js": "11.1.0",
-
+    "gamedig": "^2.0.14",
     "request": "2.81.0"
-
-  }
-
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BonzoBonham/DMGBOT/"
+  },
+  "author": "bonzo",
+  "license": "ISC"
 }
